--- a/GiaSu/Views/Home/MoTaGiaoVien.cshtml
+++ b/GiaSu/Views/Home/MoTaGiaoVien.cshtml
@@ -52,7 +52,7 @@
         </div>
         <!-- //testimonials -->
         <div class="col-lg-4 mt-md-0 mt-5 team_grid1">
-            <h3 class="heading text-uppercase">KIM CHỈ NAM</h3>
+            <h3 class="heading text-uppercase text-center">KIM CHỈ NAM</h3>
             <p>
                 Một dấu hiệu đặc trưng riêng của tri thức sâu sắc là quyền năng của sự truyền dạy.
             </p>
