--- a/GiaSu/Views/KhoaHoc/DropdownKhoaHoc.cshtml
+++ b/GiaSu/Views/KhoaHoc/DropdownKhoaHoc.cshtml
@@ -3,7 +3,8 @@
 
 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
    aria-expanded="false">
-    @Html.DisplayNameFor(model => model.TEN_KH)
+    @*@Html.DisplayNameFor(model => model.TEN_KH)*@
+    Khóa học
 </a>
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     @foreach (var item in Model)
