--- a/GiaSu/Views/Shared/_Layout.cshtml
+++ b/GiaSu/Views/Shared/_Layout.cshtml
@@ -102,7 +102,8 @@
                             </a>
                         }
 
-                        <button type="button" class="btn btn-default fas fa-cart-arrow-down"></button>
+                        @*Chen partial nut gio hang*@
+                      @Html.Action("GioHangPartial", "GioHang")
                     </div>
 
                 </div>
