--- a/GiaSu/Views/KhoaHoc/ChiTietKhoaHoc.cshtml
+++ b/GiaSu/Views/KhoaHoc/ChiTietKhoaHoc.cshtml
@@ -7,7 +7,7 @@
 
     GiaSuEntities db = new GiaSuEntities();
 }
-
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
 <!--background-->
 <div class="form-detail">
@@ -17,9 +17,10 @@
         @*<h2>Referral Program</h2>
             <p>Get free stuff if your referral becomes our customer</p>*@
         <div class="w3ls-form">
-            @using (Html.BeginForm("ThemGioHang", "GioHang", new { @MaLH = 1, @strUrl = Request.Url.ToString() }, FormMethod.Post, null))
+            @*@using (Html.BeginForm("ThemGioHang", "GioHang", new { @MaLH = 1, @strUrl = Request.Url.ToString() }, FormMethod.Post, null))*@
+            @using (Ajax.BeginForm("ThemGioHangAjax", "GioHang", new { @strUrl = Request.Url.ToString() }, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "TheAGioHang", InsertionMode = InsertionMode.Replace }, null))
             {
-            @*<form action="#" method="post">*@
+                @*<form action="#" method="post">*@
                 <ul class="fields">
                     <div class="Refer_w3l">
                         <h1 class="text-center">Lớp @Model.TEN_KH</h1>
@@ -52,7 +53,7 @@
 
                         }
                         <div>
-                            @Html.DropDownList("LopHoc", null, "Chọn lớp học", htmlAttributes: new { @class = "form-control", @id ="LopHoc" })
+                            @Html.DropDownList("LopHoc", null, "Chọn lớp học", htmlAttributes: new { @class = "form-control", @id = "LopHoc" })
                         </div>
 
                         @*<li>
@@ -121,7 +122,7 @@
                     </div>
                 }
 
-            @*</form>*@
+                @*</form>*@
             }
         </div>
     </div>
