--- a/GiaSu/Views/Shared/_Layout.cshtml
+++ b/GiaSu/Views/Shared/_Layout.cshtml
@@ -80,31 +80,43 @@
                         </li>
                     </ul>
                     <div class="buttons">
-                        @if (Session["TaiKhoan"] == null)
-                        {
-                            <button type="button" class="btn btn-info btn-lg-block w3ls-btn px-4 text-uppercase mr-2" data-toggle="modal"
-                                    aria-pressed="false" data-target="#exampleModal">
-                                Đăng nhập
-                            </button>
-                            <button type="button" class="btn btn-info btn-lg-block w3ls-btn1 px-4 text-uppercase" data-toggle="modal"
-                                    aria-pressed="false" data-target="#exampleModal1">
-                                Đăng ký
-                            </button>
-                        }
-                        else
-                        {
-                            HOCVIEN hocvien = (HOCVIEN)Session["TaiKhoan"];
+                        <div class="row">
+                            @if (Session["TaiKhoan"] == null)
+                            {
+                                <div class="col-md-3">
+                                    <button type="button" class="btn btn-info btn-lg-block w3ls-btn px-4 text-uppercase mr-2" data-toggle="modal"
+                                            aria-pressed="false" data-target="#exampleModal">
+                                        Đăng nhập
+                                    </button>
+                                </div>
+                                <div class="col-md-3">
+                                    <button type="button" class="btn btn-info btn-lg-block w3ls-btn1 px-4 text-uppercase mr-2" data-toggle="modal"
+                                            aria-pressed="false" data-target="#exampleModal1">
+                                        Đăng ký
+                                    </button>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="col-md-2">
+                                    @{
+                                        HOCVIEN hocvien = (HOCVIEN)Session["TaiKhoan"];
+                                    }
 
-                            <span class="text-dark font-weight-bold">CHÀO @hocvien.TEN_HV</span>
+                                    <span class="text-dark font-weight-bold">CHÀO @hocvien.TEN_HV</span>
+                                </div>
 
-                            <a class="btn btn-success w3ls-btn px-4 text-uppercase" href="@Url.Action("DangXuat","Home")">
-                                <span class="text-light">Đăng xuất</span>
-                            </a>
-                        }
-
-                        @*Chen partial nut gio hang*@
-                      @Html.Action("GioHangPartial", "GioHang")
-                    </div>
+                                <div class="col-md-4">
+                                    <a class="btn btn-success w3ls-btn px-4 text-uppercase" href="@Url.Action("DangXuat","Home")">
+                                        <span class="text-light">Đăng xuất</span>
+                                    </a>
+                                </div>
+                            }
+                            <div class="col-md-6">
+                                @*Chen partial nut gio hang*@
+                                @Html.Action("GioHangPartial", "GioHang")
+                            </div>
+                        </div>
 
                 </div>
             </nav>
@@ -307,6 +319,8 @@
     <!--//required-js-files-->
     <!-- //for-Testimonials -->
     <!-- start-smoth-scrolling -->
+
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Content/js/SmoothScroll.min.js"></script>
     <script type="text/javascript" src="~/Content/js/move-top.js"></script>
     <script type="text/javascript" src="~/Content/js/easing.js"></script>
